reworked html to add an additional div for input-group, added additional js functionality, and added comments

--- a/index.html
+++ b/index.html
@@ -22,80 +22,80 @@
     </header>
     <div class="container">
         <!-- hourblocks go here -->
-        <div id="hours" class="row time-block">
-            <div class="col-md-1 hour">
-                9AM
+        <div class="row time-block">
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    9 AM
+                </div>
+                <textarea class="col-md-10 description"></textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"></textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
 
-            <div class="col-md-1 hour">
-                10AM
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    10 AM
+                </div>
+                <textarea class="col-md-10 description"> </textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"> </textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
 
-            <div class="col-md-1 hour">
-                11AM
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    11 AM
+                </div>
+                <textarea class="col-md-10 description"></textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"></textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
 
-            <div class="col-md-1 hour">
-                12PM
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    12 PM
+                </div>
+                <textarea class="col-md-10 description"></textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"></textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
 
-            <div class="col-md-1 hour">
-                1PM
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    1 PM
+                </div>
+                <textarea class="col-md-10 description"></textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"></textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
 
-            <div class="col-md-1 hour">
-                2PM
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    2 PM
+                </div>
+                <textarea class="col-md-10 description"></textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"></textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
 
-            <div class="col-md-1 hour">
-                3PM
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    3 PM
+                </div>
+                <textarea class="col-md-10 description"></textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"></textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
 
-            <div class="col-md-1 hour">
-                4PM
+
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    4 PM
+                </div>
+                <textarea class="col-md-10 description"></textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"></textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
 
-            <div class="col-md-1 hour">
-                5PM
+            <div class="row no-gutters input-group">
+                <div class="col-md-1 hour">
+                    5 PM
+                </div>
+                <textarea class="col-md-10 description"></textarea>
+                <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
-            <textarea class="col-md-10 description"></textarea>
-            <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </div>
-    </div>
-
-
     </div>
     <script src="assets/js/script.js"></script>
 </body>
