--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <!-- hourblocks go here -->
         <div class="row time-block">
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     9 AM
                 </div>
@@ -31,7 +31,7 @@
                 <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
 
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     10 AM
                 </div>
@@ -39,7 +39,7 @@
                 <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
 
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     11 AM
                 </div>
@@ -47,7 +47,7 @@
                 <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
 
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     12 PM
                 </div>
@@ -55,7 +55,7 @@
                 <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
 
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     1 PM
                 </div>
@@ -63,7 +63,7 @@
                 <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
 
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     2 PM
                 </div>
@@ -71,7 +71,7 @@
                 <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
 
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     3 PM
                 </div>
@@ -80,7 +80,7 @@
             </div>
 
 
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     4 PM
                 </div>
@@ -88,7 +88,7 @@
                 <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
             </div>
 
-            <div class="row no-gutters input-group">
+            <div class="row input-group">
                 <div class="col-md-1 hour">
                     5 PM
                 </div>
